src/objects/KS_Jerarquia_Producto__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto para alojar la jerarquía de producto proviniente de SAP.</description>
    <fields>
        <fullName>KS_Denominacion_DE__c</fullName>
        <label>Denominacion DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Denominacion_EN__c</fullName>
        <label>Denominacion EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Denominacion_ES__c</fullName>
        <label>Denominacion ES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Denominacion_FR__c</fullName>
        <label>Denominacion FR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Denominacion_IT__c</fullName>
        <label>Denominacion IT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Denominacion_PT__c</fullName>
        <label>Denominacion PT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Denominacion_RU__c</fullName>
        <label>Denominacion RU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Denominacion_ZH__c</fullName>
        <label>Denominacion ZH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_SAP__c</fullName>
        <externalId>true</externalId>
        <label>Id SAP</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_Nivel_Jerarquia__c</fullName>
        <label>Número Nivel Jerarquia</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Jerarquia Producto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KS_Id_SAP__c</columns>
        <columns>KS_Numero_Nivel_Jerarquia__c</columns>
        <columns>KS_Denominacion_ES__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>JP-{00000}</displayFormat>
        <label>Jerarquia Producto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jerarquia Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>